--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,13 @@
 body {
   width: 100%;
-  color: white;
   background-image: url("/public/background.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
 
-.nav-link {
-  color: white !important;
+.clickable:hover {
+  cursor: pointer;
 }
 
 .nav-link.active {
@@ -17,22 +16,63 @@ body {
 }
 
 .blur-card {
-  background-color: rgb(120, 120, 120, 0.4);
-  border-radius: 30px;
-  backdrop-filter: blur(4px);
+  background-color: rgb(100, 100, 100, 0.5);
+  backdrop-filter: blur(5px);
+}
+
+.main-container {
+  width: 95% !important;
 }
 
 #search-form-container {
-  width: 95%;
   max-width: 600px;
-}
-
-#search-form-title {
-  text-align: center;
-  color: white;
-  border-bottom: 1px solid;
 }
 
 #search-form label {
   color: #93cae9;
+}
+
+#results-table-container {
+  max-width: 1000px;
+}
+
+#results-table {
+  overflow: hidden;
+}
+
+.results-table-row:hover {
+  cursor: pointer;
+}
+
+#details-card-container {
+  color: white;
+  max-width: 800px;
+}
+
+#details-card-tabs {
+  background-color: #5c9789;
+}
+
+#details-card-events-details h4 {
+  color: #9cfce6;
+}
+
+[ticket-status="onsale"] {
+  background-color: #377e22;
+}
+
+[ticket-status="rescheduled"] {
+  background-color: #d6a64f;
+}
+
+[ticket-status="postponed"] {
+  background-color: #d6a64f;
+}
+
+[ticket-status="offsale"] {
+  background-color: #be483d;
+}
+
+[ticket-status="canceled"] {
+  background-color: black;
 }
